--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <p>Chcesz pojąć cokolwiek o Pythonie? Kliknij poniżej:</p>
-        <a class="button-link" href="https://payhip.com/b/SKZds" target="_blank" rel="noopener noreferrer">
+        <a class="button-link" href="https://www.naffy.io/nikodem-kulesza/python-programming-language-d42" target="_blank" rel="noopener noreferrer">
             <i class="fas fa-book"></i> Kup mojego e-booka
         </a>
 
@@ -38,6 +38,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
